<resources>
    <string name="app_name">Card Maker</string>
    <string name="btn_signup">SignUp</string>
    <string name="btn_login">Already have an account! Login</string>
    <string name="progress_dialog_text">Please wait</string>
    <string name="bottom_sheet_title_text">No Available Network</string>
    <string name="bottom_sheet_desc_text">Couldn\'t connect to the internet. Please try again later.</string>
    <string name="bottm_sheet_positive_btn_txt">Yes</string>
    <string name="bottm_sheet_negative_btn_txt">No</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email ID</string>
    <string name="user_mobile">Mobile No.</string>
    <string name="user_mobile_dot">Mobile No:</string>
    <string name="user_address">Address</string>
    <string name="user_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">LogIn</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="skill1_required">Skill1 is required</string>
    <string name="skill2_required">Skill2 is required</string>
    <string name="skill3_required">Skill3 is required</string>
    <string name="designation_required">Designation is required</string>
    <string name="pass_required">Password is Required</string>
    <string name="address_required">Address is required</string>
    <string name="mobile_number_required">Mobile number is Required</string>
    <string name="pass_length">Password length can not be less than 6!</string>
    <string name="email_invalid">Email is invalid. Ex: abc@gmail.com</string>
    <string name="mobile_invalid">Mobile number is invalid. Ex: +880********** or 0*********</string>
    <string name="info_empty">All fields must be filled out</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_featured_cards">Featured Cards</string>
    <string name="menu_my_cards">My Cards</string>
    <string name="menu_received_cards">Received Cards</string>
    <string name="menu_change_pass">Change Password</string>
    <string name="menu_logout">Log Out</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_save">Save</string>
    <string name="btn_share">Share</string>

    <string-array name="array_cart_options">
        <item>Edit</item> <!--0-->
        <item>Remove</item> <!--1-->
        <item>Share</item> <!--2-->
    </string-array>
</resources>