<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rlCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="fitXY"
                android:src="@drawable/cardedit10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@color/transparent"
                android:singleLine="true"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ivCard"
                app:layout_constraintTop_toTopOf="@id/ivCard" />

            <TextView
                android:id="@+id/tvDesignation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/transparent"
                android:singleLine="true"
                android:text="Designation"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvSkill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@color/transparent"
                android:singleLine="true"
                android:text="Skill 1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesignation" />

            <TextView
                android:id="@+id/tvSkill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/transparent"
                android:text="Skill 2"
                android:nextFocusForward="@id/etMobile"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/_62sdp"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/tvSkill1"
                app:layout_constraintBottom_toBottomOf="parent" />


            <TextView
                android:id="@+id/tvSkill3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="Skill 3"
                android:nextFocusForward="@id/etSkill2"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginBottom="@dimen/_45sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@id/tvSkill1"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!--  <EditText
                  android:id="@+id/information_text_three"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                 android:textColor="@color/white"
                  android:text="Skill 3"
                  android:textSize="@dimen/_10ssp"
                  app:layout_constraintStart_toStartOf="@id/information_text"
                  app:layout_constraintTop_toBottomOf="@id/information_text" />-->

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_65sdp"
                android:background="@color/transparent"
                android:text="Mobile Number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="Email"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintStart_toStartOf="@+id/tvMobile"
                app:layout_constraintTop_toBottomOf="@id/tvMobile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:backgroundTint="@color/colorPink"
            app:cornerRadius="@dimen/_5sdp" />

        <Button
            android:id="@+id/btnShare"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/btn_share"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:backgroundTint="@color/colorNavy"
            app:cornerRadius="@dimen/_5sdp" />
    </LinearLayout>

</LinearLayout>
